2008-07-13 Uwe Klein <uklein@klein-messgeraete.de>

	* This adds open async, fileevents and sockets ( tcp server, client ) 
	  to jim-aio, using fileevents requires the jim-eventloop package .

2008-07-13 Uwe Klein <uklein@klein-messgeraete.de>

	* jim.c: in Jim_SubstObj in the switch for tokentype 
	  case: JIM_TT_DICTSUGAR and
	  accompanying code was missing.

2008-07-07 Uwe Klein <uklein@klein-messgeraete.de>

	* changes to jim-eventloop.[ch]
	* fix negative displacement in timeout computation for select
	* add basic support for the fileevent stuff [ used from jim-aio ]
	* add basic support for signal handling / actions 
	* add basic support for timer [via after] restart, cancel 
	   and returning the remaining time for cancled events

2008-07-07 oharboe

	* src/jim.c: remove bogus return value from if {[expr]} {xx} when
	{xx} is not run. 
	
2008-07-07 Duane Ellis <openocd@duaneellis.com>

src/jim.c: This simple patch adds precision support to JIM's format command.
	
2008-07-07 Duane Ellis <openocd@duaneellis.com>

src/Jim.c
	- ** THIS INCLUDES A PREVIOUS PATCH I SENT EARLIER **
	- that impliments many [format] specifies JIM did not support.
	- Jim_FormatString() - **MAJOR** work.
	- Previously only supported "%s" "%d" and "%c"
	- And what support existed had bugs.
	- NEW: *MANY* formating parameters are now supported.
	- TODO: The "precision" specifier is not supported.

	** NEW ** This patch.
	
	- Jim_StringToWide() test if no conversion occured.
	- Jim_StringToIndex() test if no conversion occured.
	- Jim_StringToDouble() test if no conversion occured.

	** NEW ** This Patch. Major Work.
	- Previously output from JIM did not get sent to GDB
	- Ditto: Output to Telnet session.
	- Above items are now fixed - By introducing callbacks
	  new function pointers in the "interp" structure.

	- Helpers that call the callbacks.
	
	- New function: Jim_fprintf()
	- New function: Jim_vfprintf()
	- New function: Jim_fwrite()
	- New function: Jim_fread()